# PDFPromptSlicer

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/pdf_prompt_slicer/: __init__.py  __main__.py  cli.py
